Fixing Overflow on Cards

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@
 html {
     scroll-behavior: smooth;
   }
-  
+
 
 body{
 	height:100%;
@@ -32,7 +32,7 @@ body{
 
 
 
-  
+
 
 #cover {
 	background: #222 url('../assets/VancouverAerialVariation.jpg') no-repeat fixed;
@@ -82,7 +82,7 @@ body{
 	text-align: center;
 	align-items: center;
 	display: inline-block;
-	color: #11284b !important; 
+	color: #11284b !important;
     margin-top: 45px;
 }
 
@@ -141,13 +141,21 @@ body{
     align-items: center;
 }
 
-.sketch{
-    width:90%;
-}
 
 #beacon .row{
     padding: 2%;
+    display: flex;
 }
+
+.sketch{
+  width: 90%;
+}
+
+#beacon img{
+  padding: 2%;
+  margin: 0 auto;
+}
+
 
 .video{
     position:relative;
@@ -187,19 +195,19 @@ body{
 
 
 
-.row .read-more { 
-    position: absolute; 
-    bottom: 0; 
+.row .read-more {
+    position: absolute;
+    bottom: 0;
     left: 0;
-    width: 100%; 
-    text-align: center; 
-    margin: 0; padding: 30px 0; 
-      
+    width: 100%;
+    text-align: center;
+    margin: 0; padding: 30px 0;
+
     /* "transparent" only works here because == rgba(0,0,0,0) */
     background-image: linear-gradient(to bottom, transparent, black);
   }
 
-  
+
 #Job-brief-paragraph{
     text-align: left;
     margin-left: 40px;
@@ -235,7 +243,7 @@ body{
 	text-align: center;
 	align-items: center;
 	display: inline-block;
-	color: #11284b !important; 
+	color: #11284b !important;
     margin-top: 45px;
 }
 
@@ -268,26 +276,25 @@ body{
 
 .nav-link{
 
-    color: #273B5E; 
+    color: #8491A4;
 
 }
 
 .nav-link-new{
 
-    color: white; 
+    color: white;
 
 }
 
 
 .nav-link-apply{
 
-    color: #8972a6; 
+    color: #8972a6;
 
 }
 
 
 .nav-item-bordered{
-    
     max-width: 200px;
     font-size: 20px;
     font-weight: 260;
@@ -306,12 +313,11 @@ body{
     font-weight: 260;
     letter-spacing: 0.1em;
     list-style-position:inside;
-    border: 2px solid #273B5E;
+    border: 2px solid #8972a6;
     border-radius: 5px;
     word-spacing: 1px;
     margin-left: 25px;
-    margin-top: -2px;
-    background-color: #273B5E;
+    background-color: #8972a6;
 
 }
 
@@ -319,7 +325,7 @@ body{
 .nav-self-made{
     color: #8491A4;
     word-spacing: 200px;
-    
+
 
 }
 
@@ -332,7 +338,7 @@ body{
 .container {
     padding-top: 10px;
     padding-bottom: 10px;
-    
+
 
 }
 
@@ -384,12 +390,9 @@ section .section-title {
 #team .card {
     border: none;
     background: #f8f9fa;
+
 }
 
-
-.card {
-    max-height: 400px;
-}
 
 .card a {
     font-size: 18px;
@@ -417,6 +420,8 @@ section .section-title {
 #team .col-xs-12, #team .col-sm-6, #team .col-md-4{
     padding:2%;
 }
+
+
 
 /* Style all font awesome icons */
 .fa {
@@ -470,7 +475,7 @@ section .section-title {
     padding: 5px;
 }
 
-@media (min-width: 444px) { 
+@media (min-width: 444px) {
    #cover-icon {
         margin-top: 9%;
         width: 90%;
@@ -484,27 +489,27 @@ section .section-title {
     .cover-container {
         padding: 0 5%;
     }
-	
+
 	#container3 {
 		height: 250px;
 	}
 }
 
-@media (min-width: 576px) { 
+@media (min-width: 576px) {
    #cover-icon {
         width: 88%;
     }
-	
+
 	.container3 {
 		height: 250px;
 	}
 }
 
-@media (min-width: 692px) { 
+@media (min-width: 692px) {
    #cover-icon {
         width: 70%;
     }
-	
+
 	.container3 {
 		height: 300px;
 	}
@@ -524,7 +529,7 @@ section .section-title {
     .cover-container {
         padding: 0 5%;
     }
-	
+
 	.container3 {
 		height: 350px;
 	}
@@ -544,7 +549,7 @@ section .section-title {
     .cover-container {
         padding: 0 5%;
     }
-	
+
 	.container3 {
 		height: 400px;
 	}
